last fix contrast issues

--- a/style.css
+++ b/style.css
@@ -90,11 +90,9 @@ transition: 200ms;
 /*Sections Styling */
 .hero-section div h1,h2{
   font-family: "Lora", serif;
-  color: #ffffff;
-}
-#activities{
   color: #000000;
 }
+
 
 .hero-section div h1{
  font-size: 3rem;
